checkByteBuffer has the wrong signature

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • None
    • b21
    • sparc
    • linux

      The function checkByteBuffer in os_linux_sparc.cpp needs to a JavaThread* thread argument due to changes made by JDK-8156088, Reintegrate 8153892: Handle unsafe access error directly in signal handler instead of going through a stub.

            Assignee:
            Erik Helin
            Reporter:
            Erik Helin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: