8182164: checkByteBuffer has the wrong signature

Reviewed-by: ehelin, stuefe